# agent_platform_oci

./: .env.example  MANUAL_AGENT_PLATFORM_GATEWAYS.md  README.md  README_en.md  docker-compose.yml  pyproject.toml
Documentacao/: README_MCP.md  (+24 more)
evals/offline/: .env.example  Dockerfile  README.en-US.md  README.md  pyproject.toml
evals/offline/configs/judge/: agents.yaml  session_metrics.yaml  trace_metrics.yaml
evals/offline/configs/llm_profiles/: llm_profiles.yaml
evals/offline/evaluator/: cli.py  engine.py
evals/offline/evaluator/analytics/: vloop.py
evals/offline/evaluator/api/: main.py
evals/offline/evaluator/collectors/: agent_framework.py  base.py  langfuse.py  mock.py
evals/offline/evaluator/config/: agents.py  settings.py
evals/offline/evaluator/core/: models.py
evals/offline/evaluator/identity/: resolver.py
evals/offline/evaluator/judges/: llm_judge.py
evals/offline/evaluator/llm/: client.py  profile_resolver.py
libs/agent_framework/: llm_profiles.yaml.example  pyproject.toml
libs/agent_framework/Infrastructure_Langfuse/: docker-compose.yml
libs/agent_framework/config/: guardrails.yaml  judges.yaml  llm_profiles.yaml  mcp_parameter_mapping.yaml  mcp_servers.yaml  tools.yaml
libs/agent_framework/docs/: CONVERSATION_SUMMARY_MEMORY.md  DYNAMIC_LLM_PROFILES.md  GUARDRAILS_CALIBRATED_ADAPTATION.md  GUARDRAILS_LLM_PROFILES_ENFORCEMENT.md  GUARDRAILS_REASON_REAL_FIX.md  GUARDRAILS_YAML_SOURCE_OF_TRUTH.md  IC_NOC_GRL_LANGFUSE_NATIVE.md  JUDGES_CALIBRATED_ADAPTATION.md  JUDGES_YAML_SIMPLE_SCHEMA.md  JUDGES_YAML_SOURCE_OF_TRUTH.md  JUDGE_MODEL_ERROR_FAIL_CLOSED.md  LANGFUSE_ANALYTICS_CONTEXT_CORRELATION_FIX.md  LANGFUSE_INTERNAL_EVENT_ROOT_TRACE_FIX.md  LANGFUSE_SPAN_HIERARCHY_FIX.md  LANGFUSE_TRACE_CORRELATION_FIX.md  LEGACY_OUTPUT_GUARDRAIL_REMOVAL.md  LLM_PROFILES_PROVIDER_EXPLICIT.md  MCP_CACHE.md  MCP_PARAMETER_EXTRACTION.md  OCI_INSTANCE_PRINCIPAL_AND_FASTMCP.md  README_TIM_OBSERVER_PAYLOAD_FIX.md
(+379 files in other folders)
