[project]
name = "agent-framework-evaluator"
version = "0.2.0"
description = "Offline LLM-as-a-Judge evaluator for Agent Framework conversations"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "oracledb>=2.4.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "click>=8.1.7",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
af-evaluator = "evaluator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluator*"]
