[project]
name = "agent-framework"
version = "0.1.0"
description = "Framework de agentes LangGraph + OCI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.60.0",
  "langfuse>=3.0.0",
  "langgraph>=0.2.60",
  "langchain-core>=0.3.0",
  "oracledb>=2.4.0",
  "pymongo>=4.8.0",
  "redis>=5.0.0",
  "oci>=2.130.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "PyYAML>=6.0.2",
  "aiohttp>=3.9.0",
  "motor>=3.6.0",
  "google-cloud-pubsub>=2.28.0",
  "mcp>=1.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=80", "wheel>=0.45"]
build-backend = "setuptools.build_meta"
